// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bookmark correctly renders in NO favorite item 1`] = `
<button
  className="place-card__bookmark-button  button"
  onClick={[MockFunction]}
  type="button"
>
  <svg
    className="place-card__bookmark-icon"
    height={19}
    width={18}
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    In bookmarks
  </span>
</button>
`;

exports[`Bookmark correctly renders in favorite item 1`] = `
<button
  className="place-card__bookmark-button place-card__bookmark-button--active button"
  onClick={[MockFunction]}
  type="button"
>
  <svg
    className="place-card__bookmark-icon"
    height={19}
    width={18}
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    In bookmarks
  </span>
</button>
`;
